--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --loader ts-node/esm src/index.ts",
-    "build": "tsc && tsc-alias && copy dataset.csv dist\\",
+    "build": "tsc && tsc-alias && cp dataset.csv dist\\",
     "start": "node dist/index.js",
     "seed": "node dist/utils/seed.js"
+    "postinstall": "npm run seed",
   },
   "keywords": [],
   "author": "",
