--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --loader ts-node/esm src/index.ts",
-    "build": "tsc && tsc-alias && cp dataset.csv dist\\",
+    "build": "tsc && tsc-alias && cp dataset.csv dist/",
     "start": "node dist/index.js",
-    "seed": "ts-node src/utils/seed.ts",
+    "seed": "node --loader ts-node/esm src/utils/seed.ts",
     "postinstall": "npm run seed"
   },
   "keywords": [],
